# buddy

./: Cargo.toml  README.md
src/: context.rs  db.rs  line.rs  main.rs  openai.rs  secrets.rs
